added two-grid acceleration

--- a/bib/bib.bib
+++ b/bib/bib.bib
@@ -4,6 +4,22 @@
   publisher = 	 {American Nuclear Society},
   year = 	 {1993},
 }
+
+@article{Adams1993,
+author = {Adams, B. T. and Morel, Jim E.},
+doi = {10.13182/NSE115-253},
+file = {:home/josh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Adams, Morel - 1993 - A Two-Grid Acceleration Scheme for the Multigroup Sn Equations with Neutron Upscattering.pdf:pdf},
+isbn = {0872629252},
+issn = {0029-5639},
+journal = {Nuclear Science and Engineering},
+mendeley-groups = {Transport EQ/Multigrid,1. Dissertation/Acceleration Schemes/Two-grid},
+number = {May},
+pages = {253--264},
+title = {{A Two-Grid Acceleration Scheme for the Multigroup Sn Equations with Neutron Upscattering}},
+volume = {115},
+year = {1993}
+}
+
 @article{Adams2002,
 abstract = {In discrete-ordinates (SN) simulations of large problems involving linear interactions between radiation and matter, the underlying linear Boltzmann problem is discretized and the resulting system of algebraic equations is solved iteratively. If the physical system contains subregions that are optically thick with small absorption, the simplest iterative process, Source Iteration, is inefficient and costly. During the past 40 years, significant progress has been achieved in the development of acceleration methods that speed up the iterative convergence of these problems. This progress consists of (i) a theory to derive the acceleration strategies, (ii) a theory to predict the convergence properties of the new strategies, and (iii) the implementation of these concepts in production computer codes. In this Review we discuss the theoretical foundations of this work, the important results that have been accomplished, and remaining open questions.},
 author = {Adams, Marvin L. and Larsen, Edward W.},
